# MultiProcessMatrix

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  child-matrix.c  flake.nix  parent-matrix.c
